# ner-benchmarks

./: README.md  Stanford-Flair.ipynb  Stanford-ner-complete.ipynb  Stanford_ner_complete.ipynb  f1_scores.md  flair_ner_complete.ipynb
datasets/SEC-filings/: sec_train.tsv
datasets/conll/conll2003/: train.tsv
datasets/ncbi/: ncbi_train.tsv  train.tsv
deploy/docker/dockerfiles/base/: pyproject.toml
deploy/docker/dockerfiles/flair/: Dockerfile  pyproject.toml
deploy/docker/dockerfiles/spacy/: Dockerfile  pyproject.toml
src/notebooks/Allen NLP/allen/: allen.ipynb  prediction_ncbi.json  prediction_sec.json
src/notebooks/Allen NLP/allen/configs/: train_lstm-ncbi.jsonnet  train_lstm-sec.jsonnet  train_lstm.jsonnet
src/notebooks/Allen NLP/allen/data/: download.sh  output.txt
src/notebooks/Allen NLP/allen/sec/: test  val
src/notebooks/Allen NLP/allen/tagging/models/: lstm.py  lstm_crf.py
src/notebooks/Allen NLP/allen/tagging/readers/: conll_reader.py
src/notebooks/FlairNER/: flair_ner_complete.ipynb
src/notebooks/Spacy/: spacy_ner_conll.ipynb
src/notebooks/Stanford NER/: StanfordNER_demo.ipynb  Stanford_ner_complete.ipynb  prop.txt  prop_conll.txt  prop_ncbi.txt  prop_sec.txt
